--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="work">
-        <img class="image1" src="/Users/gdua0001/Dropbox/PhD/Atom/web development/CSS-My Site/images/machine-learning.png" alt="">
+        <img class="image1" src="images/machine-learning.png" alt="">
         <h3>Working Experience</h3>
         <ul class="list">
           <li>Postdoctoral research scientist, CSIRO (12/2021 – present)</li>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="Academic">
-        <img class="image2" src="/Users/gdua0001/Dropbox/PhD/Atom/web development/CSS-My Site/images/credits.png" alt="">
+        <img class="image2" src="images/credits.png" alt="">
         <h3>Academic Qualification</h3>
         <ul class="list">
           <li>Ph.D. from Monash University, Australia (10/2017 – 09/2021) </li>
