--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="contact">
         <hr>
         <h2>Get in touch</h3>
-        <p>If you want to know more about me or want to have a chat, sene me a message.</p>
+        <p>If you want to know more about me or want to have a chat, send me a message.</p>
         <a class="btn" href="contact.html">CONTACT ME</a>
       </div>
     </div>
