--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1 class="word1">I'm Gan</h1>
       <h2 class="word2">A data scientist</h3>
       <hr>
-      <h2 class="word3">My Profiels</h2>
+      <h2 class="word3">My Profiles</h2>
 
       <div class="profile">
         <img class="photo" src="https://i1.rgstatic.net/ii/profile.image/1023200947367944-1620961524675_Q128/Gan-Duan.jpg" alt="Gan-profile">
